--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
   "author": "Justin Webb <jw.justinwebb.io>",
   "license": "BSD",
   "devDependencies": {
-    "ghost": "^0.5.3",
-    "gulp": "^3.8.9",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-colorguard": "^1.0.0",
-    "gulp-concat": "^2.4.1",
+    "browser-sync": "^2.7.13",
+    "ghost": "^0.6.4",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-colorguard": "^1.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-embedlr": "^0.5.2",
-    "gulp-extract-sourcemap": "^0.1.1",
+    "gulp-extract-sourcemap": "*",
     "gulp-if": "^1.2.5",
-    "gulp-livereload": "^2.1.1",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.2.2",
-    "gulp-sftp": "^0.1.3",
-    "gulp-sourcemaps": "^1.2.4",
-    "gulp-util": "^3.0.1",
-    "gulp-zip": "^2.0.2",
-    "lazypipe": "^0.2.2"
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.3",
+    "gulp-sftp": "^0.1.4",
+    "gulp-sourcemaps": "*",
+    "gulp-util": "*",
+    "gulp-zip": "*",
+    "lazypipe": "^1.0.1",
+    "run-sequence": "^1.1.1"
   },
   "readme": "readme.md",
   "repository": "https://github.com/JustinWebb/ghost-theme-development.git"
